--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=f1-2025
+spring.data.web.pageable.default-page-size=10
+spring.data.web.pageable.max-page-size=30
+spring.datasource.url=jdbc:mysql://localhost:3306/f1_2025
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.open-in-view=true
+server.port=8080
